# quickwit_perf

./: .gitignore  Cargo.toml  README.md  build_index.toml  db.json  quickwit.yaml
index_configs/: hdfs_index_config.yaml
queries/: hdfs.yaml
src/: build_index.rs  common.rs  main.rs
