[package]
name = "track_index_size"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.7"
fs_extra = "1.2.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8.24"
toml = "0.5.9"
